add catagories folder for blogs and add user data store api

--- a/app/globals.css
+++ b/app/globals.css
@@ -172,3 +172,17 @@ body {
   object-fit: cover;
 
 }
+
+.navbar-responsive {
+  @media screen and (max-width: 1023px) {
+    
+    .block-to-hide {
+      display: none;
+      justify-content: space-between;
+    }
+    .block-to-display {
+      display: block; 
+
+    }
+  }
+}
